bk_ida/gccida/c3/pedwarn_init
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/c-typeck.c:5111:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/c-typeck.c:5112:22: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_base < spelling_0 ) 
                     ^~~~~~~~~~
                     spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/c-typeck.c:5136:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v3 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/pedwarn_init/src/obj/c-typeck.o] Error 1
